Addressed some SonarCloud findings; Fixed issue in EmptyCollections Test